wordpress-deployment-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      env: test
  template:
    metadata:
      labels:
        app: wordpress
        env: test
    spec:
      # Test node'unda çalışması için : NodeSelector kullanılabildiği gibi NodeAffinity'de kullanılqbilir
      nodeSelector:
        node-role: test
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-storage
          mountPath: /var/www/html
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: wordpress-storage
        persistentVolumeClaim:
          claimName: wordpress-pvc
