loadbalancer-service.yaml
# loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-app-lb
  namespace: production
  labels:
    app: k8s-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: k8s-app
  sessionAffinity: None
