mysql-service-production.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
    env: production
