wordpress-service-production.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress
    env: production
