wordpress-service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: test
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: wordpress
    env: test
